[package]
name = "cryptobot"
version = "0.1.0"
authors = ["Gregory Lemercier <greglemercier@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
hmac = "0.7.1"
sha2 = "0.8.0"
serde = "1.0"
serde_json = "1.0"
hocon = "0.3"
